--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,44 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
-name = "pydantic_graph_neo4j_persistence"
-version = "0.1.1"
+name = "pydantic-graph-neo4j-persistence"
+version = "0.1.2"
 description = "Neo4j persistence adapter for Pydantic Graph"
-readme = "README.md"
-requires-python = ">=3.11"
-license = {text = "MIT"}
 authors = [
     {name = "Goduu", email = "idcangussu@hotmail.com"}
 ]
+license = {text = "MIT"}
+readme = "README.md"
+classifiers = [
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: System Administrators",
+    "Environment :: Console",
+    "Environment :: MacOS X",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Internet",
+]
+requires-python = ">=3.9"
 dependencies = [
     "pydantic>=2.0",
     "pydantic-graph>=0.0.42",
     "pydantic-ai>=0.0.42",
-    "groq>=0.1.0"
 ]
+
 [project.urls]
 "Homepage" = "https://github.com/Goduu/pydantic_graph.neo4j_persistence"
 "Source" = "https://github.com/Goduu/pydantic_graph.neo4j_persistence"
+
+
+[tool.hatch.build.targets.wheel]
+packages = ["pydantic_graph_neo4j_persistence"]
