--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pydantic>=2.0",
     "pydantic-graph>=0.0.42",
     "pydantic-ai>=0.0.42",
+    "neo4j>=5.0",
 ]
 
 [project.urls]
